--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,5 +1,8 @@
-Flask==2.3.2
-Flask-SQLAlchemy==3.0.5
-Flask-Login==0.6.2
-pytest==7.4.0
-SQLAlchemy==2.0.21
+Flask==3.0.2
+Flask-Login==0.6.3
+Flask-SQLAlchemy==3.1.1
+python-dotenv==1.0.1
+SQLAlchemy==2.0.35
+pytest==8.3.3
+Werkzeug==3.0.1
+
